--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   "dependencies": {
     "@shoutem/ui": "^0.10.0",
     "geolib": "^2.0.22",
-    "react": "15.4.1",
-    "react-native": "0.39.1",
-    "react-native-maps": "^0.12.1",
+    "react": "~15.3.2",
+    "react-native": "github:exponent/react-native#sdk-12.0.0",
     "react-native-timeago": "^0.3.0",
     "react-redux": "^4.4.6",
     "react-timeago": "^3.1.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-persist": "^4.0.0-beta1"
+    "redux-persist": "^4.0.0-beta1",
+    "@exponent/vector-icons": "~2.0.3",
+    "exponent": "~12.0.3"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
@@ -30,5 +31,6 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "main.js"
 }
